<?xml version="1.0"?>
<package>
  <name>distance_field</name>
  <version>0.0.0</version>
  <description>
This package contains algorithms that can compute the
Euclidean Distance Transform (EDT) of a 3-D voxel grid. The input to these algorithms is
an array of points (which could represent the positions of obstacles in the world). 
The EDT provides a voxel grid in which in which each cell contains the distance to the
closest obstacle. The VoxelGrid class can also be used as a generic, templatized container for a discretized 3-D voxel grid.
  </description>

  <maintainer email="mail@mrinal.net">Mrinal Kalakrishnan</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/distance_field</url>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ldistance_field"/>
  </export>
</package>
